Closed Bug 1747033 Opened 4 years ago Closed 3 years ago

"Back" does not work correctly for pages with multipart/x-mixed-replace and history.replaceState

Categories

(Core :: DOM: Navigation, defect, P3)

Firefox 95
defect

Tracking

()

VERIFIED FIXED
99 Branch
Tracking Status
firefox99 --- verified

People

(Reporter: andreas.blochberger, Assigned: peterv)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:95.0) Gecko/20100101 Firefox/95.0

Steps to reproduce:

On some bugzilla installations, when clicking on a cell in a tabular report, the back button does no longer bring you back to the table, but to some "Bugzilla is pondering your search" page, making it impossible to return to the table

This is only the case on Firefox 95.0.1. The same procedure works Firefox 95.0 and in Chrome

Example (bugzilla report on bugs.eclipse.org):
https://bugs.eclipse.org/bugs/report.cgi?x_axis_field=bug_status&y_axis_field=component&z_axis_field=&no_redirect=1&query_format=report-table&short_desc_type=allwordssubstr&short_desc=&classification=Eclipse+Project&resolution=INVALID&longdesc_type=allwordssubstr&longdesc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&status_whiteboard_type=allwordssubstr&status_whiteboard=&keywords_type=allwords&keywords=&deadlinefrom=&deadlineto=&bug_id=&bug_id_type=anyexact&votes=&votes_type=greaterthaneq&emailtype1=substring&email1=&emailtype2=substring&email2=&emailtype3=substring&email3=&chfieldvalue=&chfieldfrom=&chfieldto=Now&j_top=AND&f1=noop&o1=noop&v1=&format=table&action=wrap

If any of the details is clicked, back from there does not bring you to the table

Actual results:

Back does not go back to the original page

Expected results:

Back should bring me back to the table report

The Bugbug bot thinks this bug should belong to the 'Core::DOM: Navigation' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.

Component: Untriaged → DOM: Navigation
Product: Firefox → Core
Flags: needinfo?(peterv)
Flags: needinfo?(bugs)
Severity: -- → S3
Status: UNCONFIRMED → NEW
Ever confirmed: true
Priority: -- → P3

This is possibly the same as bug 1748669

Assignee: nobody → peterv
Status: NEW → ASSIGNED
Flags: needinfo?(peterv)

(In reply to Olli Pettay [:smaug] from comment #2)

This is possibly the same as bug 1748669

Yes it is the same

Summary: "Back" does not work correctly → "Back" does not work correctly for pages with multipart/x-mixed-replace.
Summary: "Back" does not work correctly for pages with multipart/x-mixed-replace. → "Back" does not work correctly for pages with multipart/x-mixed-replace and history.replaceState
Pushed by pvanderbeken@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/f6a5db4ee196 "Back" does not work correctly for pages with multipart/x-mixed-replace and history.replaceState. r=smaug,necko-reviewers,valentin
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 99 Branch

Verified on a website I encountered this problem on with 99.0a1 (2022-02-22) (64-bit). Thanks so much for addressing this problem. Any chance to uplift the fix to v98?

Reproducible on Firefox 95.0.1(20211215221728) on Linux x86_64(Ubuntu 20.04). Confirmed as fixed on Firefox 99.0b3(20220313185831) and Nightly 100.0a1(20220314094248) on Linux x86_64(Ubuntu 20.04), macOS Big Sur 11 and Win 10 64-bit.
Edit: Corrected some minor spelling.

Status: RESOLVED → VERIFIED
Flags: qe-verify+

Clearing this leftover needinfo

Flags: needinfo?(smaug)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: