netwerk/streamconv/converters/nsMultiMixedConv.cpp
@@ -26,10 +26,11 @@
 using namespace mozilla;
 
 nsPartChannel::nsPartChannel(nsIChannel* aMultipartChannel, uint32_t aPartID,
-                             nsIStreamListener* aListener)
+                             bool aIsFirstPart, nsIStreamListener* aListener)
     : mMultipartChannel(aMultipartChannel),
       mListener(aListener),
-      mPartID(aPartID) {
+      mPartID(aPartID),
+      mIsFirstPart(aIsFirstPart) {
   // Inherit the load flags from the original channel...
   mMultipartChannel->GetLoadFlags(&mLoadFlags);
 
@@ -340,6 +341,12 @@ nsPartChannel::GetContentDispositionHeader(
 NS_IMETHODIMP
 nsPartChannel::GetPartID(uint32_t* aPartID) {
   *aPartID = mPartID;
+  return NS_OK;
+}
+
+NS_IMETHODIMP
+nsPartChannel::GetIsFirstPart(bool* aIsFirstPart) {
+  *aIsFirstPart = mIsFirstPart;
   return NS_OK;
 }
 
@@ -797,8 +804,10 @@ nsresult nsMultiMixedConv::SendStart() {
   MOZ_ASSERT(!mPartChannel, "tisk tisk, shouldn't be overwriting a channel");
 
   nsPartChannel* newChannel;
-  newChannel = new nsPartChannel(mChannel, mCurrentPartID++, partListener);
-  if (!newChannel) return NS_ERROR_OUT_OF_MEMORY;
+  newChannel = new nsPartChannel(mChannel, mCurrentPartID, mCurrentPartID == 0,
+                                 partListener);
+
+  ++mCurrentPartID;
 
   if (mIsByteRangeRequest) {
     newChannel->InitializeByteRange(mByteRangeStart, mByteRangeEnd);
